# ChangeLog for dev-db/rekall
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/rekall/Attic/ChangeLog,v 1.10 2004/12/17 22:41:09 carlo Exp $

*rekall-2.2.3-r1 (17 Dec 2004)

  17 Dec 2004; Carsten Lohrke <carlo@gentoo.org> -rekall-2.2.0.ebuild,
  +rekall-2.2.3-r1.ebuild, -rekall-2.2.3.ebuild:
  tarball fixes

*rekall-2.2.3 (12 Dec 2004)

  12 Dec 2004; Carsten Lohrke <carlo@gentoo.org> +rekall-2.2.3.ebuild:
  version bump

  31 Oct 2004; Simone Gotti <motaboy@gentoo.org>
  +files/rekall-2.2.1-configure.patch:
  Added a patch to the configure script to honor the "arts" USE flag. Fixes
  bug #65457.

  15 Oct 2004; Carsten Lohrke <carlo@gentoo.org> rekall-2.2.1.ebuild:
  stable on x86

  15 Oct 2004; Carsten Lohrke <carlo@gentoo.org>
  +files/rekall-2.2.1-gcc-3.4-compat.patch, rekall-2.2.1.ebuild:
  gcc-3.4 patch, minor fixes

*rekall-2.2.1 (13 Sep 2004)

  13 Sep 2004; Carsten Lohrke <carlo@gentoo.org> +rekall-2.2.1.ebuild:
  version bump

  04 Sep 2004; Thomas Matthijs <axxo@gentoo.org> rekall-2.2.0.ebuild:
  fix depend syntax 58347

  20 Aug 2004; Carsten Lohrke <carlo@gentoo.org> rekall-2.2.0.ebuild:
  stable on x86

  21 Jul 2004; David Holm <dholm@gentoo.org> rekall-2.2.0.ebuild:
  Added to ~ppc.

*rekall-2.2.0 (20 Jul 2004)

  20 Jul 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +rekall-2.2.0.ebuild:
  Initial ebuild. Thanks go to Brian Harring.
