@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/rekall/Attic/rekall-2.2.3-r1.ebuild,v 1.1 2004/12/17 22:41:09 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/rekall/Attic/rekall-2.2.3-r1.ebuild,v 1.2 2004/12/24 10:41:07 blubb Exp $
 
 inherit kde
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.rekallrevealed.org/packages/${P}-2.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="~x86 ~ppc ~amd64"
 IUSE="mysql odbc postgres xbase"
 
 DEPEND="sys-apps/sed
