@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/xbsql/Attic/xbsql-0.11.ebuild,v 1.3 2004/08/20 00:12:15 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/xbsql/Attic/xbsql-0.11.ebuild,v 1.4 2004/12/24 10:40:46 blubb Exp $
 
 inherit base
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.rekallrevealed.org/packages/${P}.tgz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="x86 ~ppc ~amd64"
 IUSE="doc"
 
 DEPEND="sys-devel/automake
