@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/xbase
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/xbase/ChangeLog,v 1.3 2004/08/20 00:11:31 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/xbase/ChangeLog,v 1.4 2004/12/24 10:40:11 blubb Exp $
+
+  24 Dec 2004; Simon Stelling <blubb@gentoo.org> xbase-2.0.0.ebuild:
+  added ~amd64
 
   20 Aug 2004; Carsten Lohrke <carlo@gentoo.org> xbase-2.0.0.ebuild:
   stable on x86
