@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/xbsql
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/xbsql/ChangeLog,v 1.3 2004/08/20 00:12:15 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/xbsql/ChangeLog,v 1.4 2004/12/24 10:40:46 blubb Exp $
+
+  24 Dec 2004; Simon Stelling <blubb@gentoo.org> xbsql-0.11.ebuild:
+  added ~amd64
 
   20 Aug 2004; Carsten Lohrke <carlo@gentoo.org> xbsql-0.11.ebuild:
   stable on x86
