@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/rekall
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/rekall/Attic/ChangeLog,v 1.10 2004/12/17 22:41:09 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/rekall/Attic/ChangeLog,v 1.11 2004/12/24 10:41:07 blubb Exp $
+
+  24 Dec 2004; Simon Stelling <blubb@gentoo.org> rekall-2.2.3-r1.ebuild:
+  added ~amd64
+
+  24 Dec 2004; Simon Stelling <blubb@gentoo.org> rekall-2.2.3-r1.ebuild:
+  added ~amd64
 
 *rekall-2.2.3-r1 (17 Dec 2004)
 
